# procura-ai

./: .env.example  .gitignore  DEPLOY.md  docker-compose.yml  package-lock.json  package.json  render.yaml  tsconfig.base.json  turbo.json
.cloudflare/: .env.example  r2-bucket-setup.sh
.github/workflows/: deploy.yml
apps/ai-service/: .env.example  Dockerfile  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/: categorize.py  forecasting.py  health.py  ocr.py  rag.py  spend.py
apps/ai-service/app/core/: __init__.py  config.py  database.py  llm.py
apps/ai-service/app/modules/categorization/: service.py
apps/ai-service/app/modules/forecasting/: service.py
apps/ai-service/app/modules/negociation/: service.py
apps/ai-service/app/modules/ocr/: service.py
apps/ai-service/app/modules/rag/: service.py
apps/ai-service/app/modules/spend/: service.py
apps/ai-service/app/routers/: negociation.py  négociation.py
apps/ai-service/scripts/: ingest_sample.py  init_db.py
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/common/: index.ts
apps/api/src/common/audit/: audit.controller.ts  audit.decorator.ts  audit.interceptor.ts  audit.module.ts  (+1 more)
apps/web/: .env.example  env.d.ts  middleware.ts  next.config.ts  package.json  wrangler.toml
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/functions/: _middleware.ts
apps/web/functions/api/: upload.ts
apps/web/lib/: api.ts  kv-cache.ts  r2.ts
(+76 files in other folders)
