[project]
name = "procura-ai-service"
version = "0.1.0"
description = "AI microservice for Procura AI - OCR, categorization, RAG, spend detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.55.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
    "pytesseract>=0.3.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pdf2image>=1.17.0",
    "numpy>=2.0.0",
    "httpx>=0.28.0",
    "sentry-sdk>=2.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
